client/src/styles/LogInForm.css
.log-in-form {
  position: absolute;
  right: 0;
  top: 50px;

  width: 180px;
  height: 180px;
  background-color: #f7f7f7;
  border: 10px solid black;


  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.input-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.login-buttons-container {
  display: flex;
  justify-content: space-between;
  align-items: center;

  width: 80%;
}

.login-button {
  background-color: #6afc3e;
  padding: 5px 10px;
  border-radius: 15px;
  cursor: pointer;

  display: flex;
  justify-content: center;
  align-items: center;
}

.login-button:hover {
  background-color: #a6ff8b;
}

.error-message {
  color: red;
}

